CCMake performance regression [MacOS Only]
ccmake for 3.17 looks to have a performance regression on projects that generate lots of output text on MacOS.
Given the following sample CMakeLists.txt
, when run under ccmake
you can watch the linear slowdown with each subsequent
message
project(sample)
foreach(v RANGE 150)
message(STATUS "${v}")
endforeach()
Benchmark
version | cmake | ccmake |
---|---|---|
3.16 | ~3ms | ~2sec |
3.17 | ~4ms | ~32sec |
Edited by Robert Maynard